app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-accent-hover {
    color: hsl(var(--accent-hover));
  }
}

@layer base {
  * {
    @apply border-border;
  }

  html {
    scroll-padding-top: 80px;
    scroll-behavior: auto;
  }

  body {
    @apply font-sans antialiased bg-background text-foreground;
  }

  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 0%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 0%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 0%;
    --primary: 143 93% 73%;
    --primary-foreground: 0 0% 0%;
    --secondary: 0 0% 96%;
    --secondary-foreground: 0 0% 0%;
    --muted: 0 0% 96%;
    --muted-foreground: 0 0% 45%;
    --accent: 143 93% 73%;
    --accent-hover: 143 100% 81%;
    --accent-foreground: 0 0% 0%;
    --destructive: 0 84% 60%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 90%;
    --input: 0 0% 80%;
    --ring: 143 93% 73%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0px;
  }
}

